--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.958.0",
     "express": "^5.2.1",
     "uuid": "^13.0.0"
   }
